# ChangeLog for virtual/perl-Socket
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Socket/ChangeLog,v 1.12 2014/01/19 09:00:28 pacho Exp $

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> perl-Socket-2.9.0.ebuild:
  amd64 stable, bug 474822

  01 Dec 2013; Johannes Huber <johu@gentoo.org> perl-Socket-2.9.0.ebuild:
  x86 stable, bug #474822

  25 Oct 2013; Jeroen Roovers <jer@gentoo.org> perl-Socket-2.9.0.ebuild:
  Stable for HPPA (bug #474822).

*perl-Socket-2.9.0 (14 Aug 2013)

  14 Aug 2013; Patrick Lauer <patrick@gentoo.org> +perl-Socket-2.9.0.ebuild:
  Bump

*perl-Socket-2.8.0 (27 Dec 2012)

  27 Dec 2012; Torsten Veller <tove@gentoo.org> +perl-Socket-2.8.0.ebuild:
  Version bump

*perl-Socket-2.7.0 (26 Dec 2012)

  26 Dec 2012; Torsten Veller <tove@gentoo.org> +perl-Socket-2.7.0.ebuild:
  Version bump

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> perl-Socket-2.6.0.ebuild:
  Add ~ppc64, wrt bug #442188

  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> perl-Socket-2.6.0.ebuild:
  Marked ~hppa (bug #442188).

  12 Nov 2012; Anthony G. Basile <blueness@gentoo.org> perl-Socket-2.6.0.ebuild:
  keyword ~ppc, bug #442188

*perl-Socket-2.6.0 (22 Aug 2012)

  22 Aug 2012; Torsten Veller <tove@gentoo.org> +perl-Socket-2.6.0.ebuild:
  Version bump

  14 Jul 2012; Ulrich Müller <ulm@gentoo.org> perl-Socket-2.1.0-r1.ebuild,
  perl-Socket-2.2.0.ebuild:
  QA: Define mandatory ebuild variables, bug 425848.

*perl-Socket-2.2.0 (10 Jun 2012)
*perl-Socket-2.1.0-r1 (10 Jun 2012)
*perl-Socket-1.940.0-r1 (10 Jun 2012)

  10 Jun 2012; Kent Fredric <kentfredric@gmail.com>
  -perl-Socket-1.940.0.ebuild, +perl-Socket-1.940.0-r1.ebuild,
  -perl-Socket-2.1.0.ebuild, +perl-Socket-2.1.0-r1.ebuild,
  +perl-Socket-2.2.0.ebuild:
  Version Bump

*perl-Socket-2.1.0 (06 Apr 2012)

  06 Apr 2012; Kent Fredric <kentfredric@gmail.com> +perl-Socket-2.1.0.ebuild:
  Version Bump

  27 Feb 2012; Kent Fredric <kentfredric@gmail.com>