@@ -1,18 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD perl-Socket-2.1.0-r1.ebuild 408 SHA256 c8cf4b26ee90f002da225d01aa6274daa3b154ee8ed3611417f868863e29287a SHA512 798aa109ff76a66fcfd1eba331dde1c131cc48d8fd956fcf61d58f1e2574a3e6c893c7161a93f4b4c1ef36f783396ed739d71ef12457ec71e1b029b227c4b73f WHIRLPOOL d4c2eebe035c9c6d127a4d11e192dadbd4e8cd5604ddc78a29b7aefc735e983ab83f149a996aee19b3a14f8f445abe93c8717577bae2edc124560121c87fc292
-EBUILD perl-Socket-2.2.0.ebuild 377 SHA256 f8186b025259a40dc7cfd69273f68f3a2f3375a23888feff4882f766a6389887 SHA512 2b173aac781af423c08fdd0d6a9bcde5a4d238ad59cfc192089d36caf991b39b3c22d49791e3fafd12ec7ffcea98445ae8b0e1dc7f8e783b526b27c73ae3f012 WHIRLPOOL 9818cc693e019d81b2147a8c783e6c05313358805be5ea77dbe76c6c27ef8b019e9a0785103344f19515eeef4f58e646c0f32bdc1e13bec155968078fa0005b9
-EBUILD perl-Socket-2.6.0.ebuild 395 SHA256 b787ea061d65774bafe7dfa0155956a190944f5807bbf3762e5552fd21552257 SHA512 814602b4e6d7662f97f62dc98348b236978165259ee5d69540cc127b18d95a62222f890fbcdc2effd9f4b240795feb77c5a444a9962a253a56c0d667eaa1665f WHIRLPOOL eb1a9cb981f504d1b48f4193c1aa2fb27bf4f590b856f410bfd4e13f7eb7823ee8533bd2ae8aa116329ec8fd5e47c45d8566ec52020f4cbc3324f3749a0b23d8
-EBUILD perl-Socket-2.7.0.ebuild 396 SHA256 a0602dd79caafda8e319de19205bcb3057e244493b2b71abf3a6ac2a6e309a46 SHA512 dd58447fd3a67b16a7ad57848c0c8c052ec1d37fc6d976627d41666e38c2224c5a5aa6020f2465df38493da1bee22689876110aed976aa70632e1d033bebba15 WHIRLPOOL 4a1ddf5c891246b0b8bbcbba6411049b341fbbc05718898c4c9d54aaf2747ec8ece4d7da654f3b81fddd75defa4740ba0be212fc2954ac45856be6b8137b7ae7
-EBUILD perl-Socket-2.8.0.ebuild 396 SHA256 c611eccfb8f9a1842d2c882ab0f320621a073d78606e3cb4e46c86dcd90681ae SHA512 0a4ebb865f26fa19205f9f89b5d5f07f5337467b9f37e06e6603abb66a6f86ff195856203a938b6cbcb74004daf9d31d8380281fd8834c6190148102098f571c WHIRLPOOL 5c7d497d30ee6349fe0450638c8adb3fdb0ddf6bcd4211d05b0476ee96f004ed2e812b261ec011c28dd0ff8fa83193b77bef7853d32b398e6e0fa5b68bca3e99
-EBUILD perl-Socket-2.9.0.ebuild 422 SHA256 ee39ccc725d29f03382b703f1fe7147392c7f9404e7c62e99a9056fe373aee4e SHA512 afe5ae58f1c434bddc090c47cf584a4a5cc54a06a00ff4144f34cfc0ca291e87687c03c8d1cb995e3ef25a5c36962b6c08c4d145348c00403d34d057a72bb82a WHIRLPOOL eff78774d1e6e145a38a1be6bf024c8edf95c75fb2be591b9b8ba4633bde6a30494856d51bc6928910b893c5912c8554ea4b47cff9db4db800cc67cd2e2eebdc
-MISC ChangeLog 2582 SHA256 45cc80cc2f23692f84cb6b76651971743fb948ace7873b3c75b1a8892d4d7c8b SHA512 a238cc9039188721b47c53235f002309815f061fccb476dcf04cf5a275eb230fa8ae21b7f536b72d6d0a31bf28db5d68ec2a23b92c1f71d2579ef00bc92d98e1 WHIRLPOOL ea9b0836ec90bfc9a009a229fee1ff3c1e06e3240d4c90061a0ca321d4c6e6d3f5e96bf09bb8edf37bd69f2e5f5ffe8da76f3bf58723200364a0a8a1d7505fb5
+EBUILD perl-Socket-2.13.0.ebuild 472 SHA256 2d869c39c389fe50724d81c181d2011f8dab67d278adfde7f480ea10ae882d97 SHA512 47c6e03d5d5124d0db3f47369a1c52d66f5d3558a71102e8f5f276255d7e86053d723e77b6cdf5d3e4634e92b7adce04674aebaf0d59e1ecedad15944e53e643 WHIRLPOOL 86c19eb55d34e10bd2da7b19dcf4c4200be842517dc8e87d5ed510d08a87509ef0102fc39841875e79c091adecbbae1ff69e0e6d9bdb953f7c792745b9fb9923
+EBUILD perl-Socket-2.9.0-r1.ebuild 471 SHA256 96fbd0a2fca5b26546809185a1a054258befbc8446bd40499e843b7390dfa330 SHA512 8df55f30349c94ad6703c780e1bc518674410d30d96ebac542eec51db518f83f425a00fb3a5aae8c1a623a4587a230d20b35d40d077810047869ad85da946341 WHIRLPOOL 52666a06280b84c12621c9dd81828d9f9a61a6edbc7aa0a5ad6f42cfdc6b7ccaae79b87d8c7594c94ac0d2e87ce7c41725c879945a5aef3ed12209bab70eefb1
+MISC ChangeLog 3004 SHA256 be5d57d89d592bf29b946f9816682a7920ecfd31dfed12ca5521032c13a07cae SHA512 a38a2f22e78bad12d8b47838752ea0a2c76d01fcbf2a7595cc77684f2ad81f1f3082899cfc9718f21e693f9ea81a3a9a30e4e8c08e158a76268ad99124efb3e6 WHIRLPOOL 2ea095ebb65dc2265aabdd6e80e3cdef3b73684d041d5b82b40d976965b4dd10ad91eb46bbb40dca2bb774af9d059a1e2bc7f60d2f50c0c91cd4ab75ccea4651
 MISC metadata.xml 161 SHA256 03133f1c99f9897289d97dc74a0ccc9b0a8138838507982422de997be1910a54 SHA512 105dfa237851f1eaa24a51b58404cc2dd4c96e5ae29dc602aa10fe916c2b8af6e6272ac89e7e1352d64e38799f38a293eebf488843490417657e94c3e751f5c8 WHIRLPOOL e2af9fd199381669706b1ddf6bc2db7a9019b6acdb1422a8f2ee8311705c819c120e87df08901c7865b37c916540862ff1d207773541d848ece41eb03e8a3d0b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlLblC0ACgkQCaWpQKGI+9SvxQCfZRECiIXlqKN267FP2IFdBBXz
-HMAAn2AbpssJKxtTToHIAmKN4l/zc840
-=ZJD3
+iQIcBAEBCAAGBQJTwmDgAAoJEJS/30SErRQvkEcP/3zzxiVkLGkemHWimOfymCAD
+GyIkyGM4oaxQqdp6NHX1S3jMDnKh1evA0GiwA/WP57VwEwufAAo0KLIn3dfUY8s6
+EssfL/RwVmaUycK4wJ6HHekFBAMG2nX9yvz3tFJOOU4f8+nPV8r2Pce5gtAuZ78c
+v7VVWErftxGIvm43RS4vq0SkptEPnxIV1l0p/ITzEqgkb4CS7u+/S+ekxVFQOKWc
+Hz+rUFvQxK38IkGjcz+6t1nClx3UX8uO1R2JxAeKDrREXpHZb72L0oqZkFl+C02v
+6k4ctykRdSvcIEAWTOGYkC/RZkt8ngg+rSrvlQvIEiPc6/JPMFGfv0xM4Ybw8FfP
+lvZl0xJ5vcSQEjAwJ+XuM2oR9g08mnfp01dqlQQytlaUGUU5NDdUi2WKTydTxBJ4
+rhGkbJs2d5Yk/RyPf/BSPGxAw9BR1MehPG5JKuZyeTnT3OdGucniHD2ZRtlvTulR
+61TyexB2zB1aIr80FAtoW00biSWBMsKdWLkHBuJzNa9yduF1pAURKUn4r2aO3Oq8
+5F79zFz9+sARSreFrr6i2Qr4HIMlA6EEh2v2XhOHQ4R3IcEfGeBY27mTAHUL/ZGu
+bK4xDEuCb0LCWSXnnfGXLokDerU1+vZSPTUHk/A+huUex/A+oflVjqLv9yY9RRgi
+gm/ZWoB7ilWu+hyD6bT4
+=r++R
 -----END PGP SIGNATURE-----
