@@ -1,14 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Socket/perl-Socket-2.1.0-r1.ebuild,v 1.2 2012/07/14 19:43:54 ulm Exp $
-
-DESCRIPTION="Virtual for ${PN#perl-}"
-HOMEPAGE=""
-SRC_URI=""
-
-LICENSE=""
-SLOT="0"
-KEYWORDS="~x86 ~amd64"
-IUSE=""
-
-RDEPEND="|| ( =dev-lang/perl-5.16* ~perl-core/${PN#perl-}-${PV} )"
