@@ -1,0 +1,19 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Socket/perl-Socket-2.13.0.ebuild,v 1.1 2014/07/13 10:29:39 dilfridge Exp $
+
+EAPI=5
+
+DESCRIPTION="Virtual for ${PN#perl-}"
+HOMEPAGE=""
+SRC_URI=""
+
+LICENSE=""
+SLOT="0"
+KEYWORDS="~amd64 ~hppa ~ppc ~ppc64 ~x86"
+IUSE=""
+
+RDEPEND="
+	|| ( =dev-lang/perl-5.20* ~perl-core/${PN#perl-}-${PV} )
+	!<perl-core/${PN#perl-}-${PV}
+"
