@@ -1,14 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Socket/perl-Socket-2.6.0.ebuild,v 1.4 2012/12/17 18:28:34 ago Exp $
-
-DESCRIPTION="Virtual for ${PN#perl-}"
-HOMEPAGE=""
-SRC_URI=""
-
-LICENSE=""
-SLOT="0"
-KEYWORDS="~amd64 ~hppa ~ppc ~ppc64 ~x86"
-IUSE=""
-
-RDEPEND="~perl-core/${PN#perl-}-${PV}"
