@@ -1,6 +1,8 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Socket/perl-Socket-2.9.0.ebuild,v 1.4 2014/01/19 09:00:28 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Socket/perl-Socket-2.9.0-r1.ebuild,v 1.1 2014/07/13 10:29:39 dilfridge Exp $
+
+EAPI=5
 
 DESCRIPTION="Virtual for ${PN#perl-}"
 HOMEPAGE=""
@@ -11,4 +13,7 @@ SLOT="0"
 KEYWORDS="amd64 hppa ~ppc ~ppc64 x86"
 IUSE=""
 
-RDEPEND="|| ( =dev-lang/perl-5.18* ~perl-core/${PN#perl-}-${PV} )"
+RDEPEND="
+	|| ( =dev-lang/perl-5.18* ~perl-core/${PN#perl-}-${PV} )
+	!<perl-core/${PN#perl-}-${PV}
+"
